--- a/estilo.css
+++ b/estilo.css
@@ -540,6 +540,19 @@ section.contato .w50,section.contato .w100{
   }
 }
 @media screen and (max-width: 500px){
+  .w33 input[type=submit]{
+    margin-left: 2px;
+  width: 100%;
+}
+  .tags-form{
+  padding-left: 0px;
+}
+  .formulario input[type=text],.formulario input[type=E-mail]{
+  margin-bottom: 0px;
+}
+.formulario textarea{
+  margin-bottom: 0px;
+}
   .card-text{
   width:100%;
 }
