--- a/estilo.css
+++ b/estilo.css
@@ -494,6 +494,9 @@ section.contato .w50,section.contato .w100{
 }
 /*responsivo*/
 @media screen and (max-width:768px){
+  section.main-bg{
+    height: 500px;
+  }
   .w33 input[type=submit]{
     margin-left: 2px;
   width: 100%;
