--- a/estilo.css
+++ b/estilo.css
@@ -353,12 +353,13 @@ section.sobre__noticia{
 section.paralax{
   padding: 30px 0;
   width: 100%;
-  min-height: 200px;
-  background-image: url(paisagens.jpg); 
+  min-height: 200px;  
+  background-image: url(paisagens.jpg);  
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
   text-align: center;
+  object-fit: cover;
 }
 section.paralax h2.chamada-paralax{
   border: 1px solid #44d4c5;
@@ -494,6 +495,10 @@ section.contato .w50,section.contato .w100{
 }
 /*responsivo*/
 @media screen and (max-width:768px){
+  .sobre__single_noticia p{
+    width:100%;
+    float: none;  
+  }
   .inscricao-form input[type=text]{
   width: 100%;
   display:block;
@@ -550,7 +555,7 @@ section.contato .w50,section.contato .w100{
   width:100%;
 }
 .sobre__single_noticia p{
-  width:50%;
+  width:100%;
   }
 }
 @media screen and (max-width: 500px){
